--- a/index.html
+++ b/index.html
@@ -24,5 +24,6 @@
   <h3 id="song" class="btn btn-info">Song Name:</h3>
  </center> 
     <script src="main.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/1.5.0/addons/p5.sound.min.js"></script>
 </body>
 </html>
